[package]
name = "miniball"
description = "Minimum enclosing ball"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
version = "0.5.0"
rust-version = "1.61.0"
edition = "2021"
documentation = "https://docs.rs/miniball"
repository = "https://github.com/qu1x/miniball"
readme = "README.md"
license = "MPL-2.0"
keywords = [
	"MEB",
	"SEB",
	"circumscribed-sphere",
	"smallest-ball",
	"welzl-algorithm",
]
categories = [
	"no-std",
	"science",
	"graphics",
	"algorithms",
	"mathematics",
]
include = [
	"src/**/*.rs",
	"tests/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nalgebra = { version = "0.32.5", default-features = false, features = ["alloc"] }
stacker = { version = "0.1.15", optional = true }

[features]
default = ["std"]
std = ["dep:stacker"]

[dev-dependencies]
nalgebra = { version = "0.32.5", features = ["alloc", "rand"] }
rand_distr = { version = "0.4.3", default-features = false }
rand = { version = "0.8.5", default-features = false }

[profile.test]
opt-level = 2
